# docs/contracts/openapi.json
@@ -5930,6 +5930,12 @@
           "titleOriginal": {
             "type": "string"
           },
+          "titleVi": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "originalUrl": {
             "$ref": "#/components/schemas/HttpsUrl"
           },
